--- a/build.yaml
+++ b/build.yaml
@@ -19,8 +19,6 @@
 ---
 include:
   - board: nice_nano
-    shield: boardsource3x4
-  - board: nice_nano
-    shield: settings_reset
-  - board: nice_nano
     shield: dummy
+  - board: nice_nano
+    shield: dummy_bt
